# StudentManageSystem

./: README.md
ClionVersion/: CMakeLists.txt
ClionVersion/src/controllers/: AppController.cpp  AppController.h  AppControllerTest.cpp
ClionVersion/src/models/: Course.cpp  Course.h  EnrollmentRecord.cpp  EnrollmentRecord.h  Student.cpp  Student.h
ClionVersion/src/repositories/: FileCourseRepository.cpp  FileCourseRepository.h  FileEnrollmentRepository.cpp  FileEnrollmentRepository.h  FileStudentRepository.cpp  FileStudentRepository.h  ICourseRepository.h  IEnrollmentRepository.h  IStudentRepository.h  InMemoryCourseRepository.cpp  InMemoryCourseRepository.h  InMemoryEnrollmentRepository.cpp  InMemoryEnrollmentRepository.h  InMemoryStudentRepository.cpp  InMemoryStudentRepository.h  RepositoriesUnitTest.cpp  courses.txt  enrollmentrecors.txt  students.txt
ClionVersion/src/services/: CourseService.cpp  CourseService.h  EnrollmentService.cpp  EnrollmentService.h  ServicesUnitTest.cpp  StudentService.cpp  StudentService.h
ClionVersion/src/test_data/: courses.csv  enrollments.csv  students.csv
ClionVersion/src/utils/: Validation.cpp  Validation.h  ValidationTest.cpp
ClionVersion/src/views/: BaseView.cpp  BaseView.h  CourseView.cpp  CourseView.h  EnrollmentView.cpp  EnrollmentView.h  MainView.cpp  MainView.h  StudentView.cpp  StudentView.h
VS2022/StudentInformationSystem/: main.cpp
设计文档/: Version-1.md
设计文档/Student Information System/Student Information System/: Version-1.md
设计文档/Student Information System/各种图示/: Enroll the student.md  Enrollment 序列图.md  SISUML.drawio  mainView 跳转流程.md  更新学生信息 -- 流程图.md  添加新的学生信息 -- 流程图.md
设计文档/参考代码/: View 系列的参考代码.md
设计文档/各种图示/: MainView.xmind  Unenroll a student from a Course.md  删除指定学生 -- 流程图.md  搜索学生信息--流程图.md  整个验证逻辑 -- 流程图 + 序列图.md
